# solana-nft-mint-with-merkletree

./: key.json  package.json
contract/: Anchor.toml  package.json
contract/programs/teacher-nft-minting/: Cargo.toml
contract/programs/teacher-nft-minting/src/: lib.rs  set_collection_during_mint.rs
contract/tests/: teacher-nft-minting.ts
src/: App.js  address.module.css  connection.tsx  idl.json  utils.js
