[package]
name = "nft-staking"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_staking"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]

#add to default for local testing
default = ["local-testing"]
local-testing = []
aurorynet = []

[dependencies]
anchor-lang = { version = "0.24.2", features = ["init-if-needed"] }
anchor-spl = "0.24.2"
mpl-token-metadata = { version="1.2.7", features = [ "no-entrypoint" ]}
solana-program = "1.9.13"
